--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
       assumenda. Illum aut tempore quae blanditiis temporibus modi, ducimus
       placeat dolorum quidem!
     </p>
+
+    <h2>Subtítulo</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
+      rerum.
+    </p>
   </body>
 </html>
